add the upload_and_parse action

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -168,7 +168,7 @@
 			</div>
 			<div class="row">
 				<div id="dropzone">
-					<form action="upload" class="dropzone" id="image"
+					<form action="upload_and_parse" class="dropzone" id="image"
 						enctype="multipart/form-data" method="post">
 						<div class="fallback">
 							<input name="file" type="file" />
