enanble user to use different models to do scene parsing

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -1173,7 +1173,7 @@ Components
 }
 
 .btn-primary {
-  background: #90d7ea;
+  background: #f86942;
 }
 
 .btn-success {
@@ -1768,5 +1768,4 @@ a > img.fh5co-align-center {
   margin-left: auto;
   margin-right: auto;
 }
-
 /*# sourceMappingURL=style.css.map */
